# draughts

./: .gitignore  CMakeLists.txt  run.sh
include/: ArgumentParser.hpp  Board.hpp  BoardBuilder.hpp  BoardView.hpp  Game.hpp  GameHandler.hpp  GameState.hpp  HumanPlayer.hpp  MinMaxPlayer.hpp  Move.hpp  Piece.hpp  Player.hpp  PlayerHandler.hpp  RandomCpuPlayer.hpp  SwitchException.hpp  System.hpp  Utility.hpp  Vector2.hpp
src/: ArgumentParser.cpp  Board.cpp  BoardBuilder.cpp  BoardView.cpp  CMakeLists.txt  Game.cpp  GameHandler.cpp  GameState.cpp  HumanPlayer.cpp  MinMaxPlayer.cpp  Move.cpp  PlayerHandler.cpp  RandomCpuPlayer.cpp  System.cpp  main.cpp
